--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_midi_pro: ^3.1.4
   shared_preferences: ^2.3.3
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
