--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_midi_pro: ^3.1.4
   shared_preferences: ^2.3.3
+  flutter_confetti: ^0.3.4
 
 dev_dependencies:
   flutter_test:
