--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.3.3
   flutter_confetti: ^0.3.4
   flutter_midi_command: ^0.5.3
+  wakelock_plus: ^1.3.2
 
 dev_dependencies:
   flutter_test:
