--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_confetti: ^0.3.4
   flutter_midi_command: ^0.5.3
   wakelock_plus: ^1.3.2
+  input_quantity: ^2.5.1
 
 dev_dependencies:
   flutter_test:
