--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_midi_pro: ^3.1.4
+  flutter_midi_pro: 3.1.4
   shared_preferences: ^2.3.3
   flutter_confetti: ^0.3.4
   flutter_midi_command: ^0.5.3
